<resources>
    <string name="app_name">COVID-19 TH Situation Tracker</string>
    <string name="IMAGE_WIDTH">30dp</string>
    <string name="IMAGE_HEIGHT">30dp</string>

    <string name="home_header">รายงานสถานการณ์ประจำวัน</string>
    <string name="home_summary">สรุปสถานการณ์ผู้ติดเชื่อวันนี้</string>

    <string name="warning_header">คำเเนะนำเเละการป้องกัน COVID-19</string>
    <string name="warning_header_2">รู้สึกไม่สบาย ? จะติดโควิด-19 รึเปล่า ?</string>
    <string name="warning_header_3">ลองทำเเบบสำรวจด้านล่าง หากอาการยังไม่ดีขึ้น\nควรรีบไปพบเเพทย์เพื่อทำการตรวจโรคอย่างละเอียด</string>
    <string name="warning_btn_check">ทำเเบบประเมินความเสี่ยงเบื้องต้น</string>

    <string name="timeline_day">Day : </string>
    <string name="timeline_date">วันที่ : </string>
    <string name="timeline_new_confirmed">ผู้ติดเชื้อรายใหม่ : </string>
    <string name="timeline_new_recovered">รักษาหายเพิ่ม : </string>
    <string name="timeline_new_deaths">เสียชีวิตเพิ่ม : </string>
    <string name="timeline_confirmed">ติดเชื้อทั้งหมด : </string>
    <string name="timeline_recovered">รักษาหายั้งหมด : </string>
    <string name="timeline_deaths">เสียชีวิตทั้งหมด : </string>

    <string name="timeline_header">ไทม์ไลน์ผู้ติดเชื้อภายในประเทศ</string>
    <string name="timeline_body">ไทม์ไลน์เเสดงข้อมูลผู้ติดเชื้อภายในประเทศไทย\nเริ่มตั้งแต่วันที่ 01 มกราคม 2563 (01/01/2020)</string>
    <string name="timeline_body_info">ข้อมูลจาก : กรมควบคุมโรค กระทรวงสาธารณสุข</string>

    <string name="info_header">ข้อมูลเเอพพลิเคชั่น</string>
    <string name="info_header_body">เเอพพลิเคชั่น : COVID-19 TH Situation Tracker\n\nเวอร์ชั่น : 1.3</string>
    <string name="info_body">เเอพพลิเคชั่น <b>COVID-19 TH Situation Tracker</b> จัดทำขึ้นเพื่อติดตาม รายงานสถานการณ์ เเละเเสดงผลข้อมูล ข้อมูลเเละรายงานทั้งหมด มาจาก <b>Open API
    ของ กรมควบคุมโรค กระทรวงสาธารณสุข</b> ซึ่งจัดทำขึ้นเพื่อให้นักพัฒนาสามารถดึงเอาข้อมูล รายงานสถานการณ์ประจำวันรวมถึง ข้อมูลต่างๆที่ทางกรมควบคุมโรคจัดทำขึ้น มาจัดการเเละเเสดงผลในเเอพพลิเคชั่นของตัวเอง</string>
    <string name="info_footer_own">"Made By : Focus Sila Pakdeewong\n\n( — MisterFocusTH — )"</string>
    <string name="info_footer_github">สำรวจ รายงานข้อผิดพลาด ข้อมูลเพิ่มเติม บน Github</string>

    <string name="snackbar_text">"หากข้อมูลไม่อัพเดท ดึงหน้าจอลงเพื่ออัพเดทข้อมูล..."</string>

    <string name="dialog_no_internet_title">"ไม่มีอินเตอร์เน็ต"</string>
    <string name="dialog_no_internet_message">"ไม่สามารถรับข้อมูล กรุณาเชื่อมต่ออินเตอร์เน็ต"</string>
    <string name="dialog_no_internet_button">"ปิด"</string>

    <string name="dialog_new_version_update_title">"ตรวจพบเวอร์ชั่นใหม่พร้อมใช้งาน"</string>
    <string name="dialog_new_version_update_message">"เเอพพลิเคชั่นมีการอัพเดท คุณต้องการอัพเดทเป็นเวอร์ชั่นล่าสุดหรือไม่ ?"</string>
    <string name="dialog_new_version_update_button_update">"อัพเดท"</string>
    <string name="dialog_new_version_update_button_close">"ปิด"</string>

    <string name="dialog_loading_title">"กำลังเรียกข้อมูล..."</string>
    <string name="dialog_loading_message">"กำลังเรียกข้อมูล โปรดรอสักครู่"</string>

    <string name="box_header">"        อัพเดทสถานการณ์ COVID-19 ในประเทศไทย        "</string>

    <string name="box_updatedDate">"       ข้อมูลอัพเดทเมื่อวันที่ : date  "</string>
    <string name="box_newcases">"ผู้ติดเชื้อรายใหม่วันนี้\n\nเพิ่มขึ้น _ คน (+ _)"</string>
    <string name="box_recovered">"ผู้รักษาหายรายใหม่วันนี้\n\nเพิ่มขึ้น _ คน (+ _)"</string>
    <string name="box_death">"เสียชีวิต\n\nTD คน\n\nวันนี้ : (+ _)"</string>
    <string name="box_total_cases">"ติดเชื้อสะสม\n\nTC คน\n\nวันนี้ : (+ _)"</string>
    <string name="box_total_recovered">"รักษาหาย\n\nTR คน\n\nวันนี้ : (+ _)"</string>
    <string name="box_today_update">"วันนี้ (date)\n\nประเทศไทยมีผู้ติดเชื้อ COVID-19\n\n- รายใหม่จำนวน (newCase) คน\n- จำนวนผู้รักษาหายวันนี้เพิ่มขึ้น (newRecovered) คน\n- รักษาตัวอยู่ในโรงพยาบาล (Hospitalized) คน\n- ผู้เสียชีวิตรายใหม่ (newDeath) คน"</string>

    <string name="box_you_can_help">"คุณเองก็สามารถช่วยหยุดการเเพร่ระบาดได้เพียง..."</string>
    <string name="box_you_can_help_pay_attention">"คอยติดตามเเละปฎิบัติตามคำเเนะนำจาก\nหน่วยงานรัฐ"</string>
    <string name="box_you_can_help_social_distancing">"รักษาระยะห่างจากผู้อื่นเพื่อความปลอดภัย"</string>
    <string name="box_you_can_help_wash_your_hands">"ล้างมือด้วยน้ำยาล้างมือหรือเจลเเอลกอฮอ\nเเละรักษาความสะอาดภายนอกร่างกายบ่อยๆ"</string>
    <string name="box_you_can_help_wear_mask">"อย่าลืมสวมหน้ากากอนามัยทุกครั้ง\nที่ออกจากบ้าน"</string>

    <string name="button_reportIssues">"รายงานข้อผิดพลาด"</string>
    <string name="button_open_official_website">"ดูผ่านเว็บไซค์ทางการ"</string>

    <string name="box_footer_thanks">"ข้อมูลจาก : กรมควบคุมโรค กระทรวงสาธารณสุข\nเเละ สํานักงานพัฒนารัฐบาลดิจิทัล"</string>

    <string name="bottom_menu_home">หน้าเเรก</string>
    <string name="bottom_menu_explore">ไทม์ไลน์ผู้ติดเชื้อในประเทศ</string>
    <string name="bottom_menu_warning">คำเเนะนำเเละการป้องกัน</string>
    <string name="bottom_menu_info">ข้อมูลเเอพพลิเคชั่น</string>

    <string name="CD">CD</string>
</resources>
